--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,14 @@ a:visited {
   text-decoration: none;
 }
 
+.btn-block {
+  display: block;
+  width: 100%;
+}
+.page-header{
+  background: linear-gradient(rgba(0,0,0,0.6) , rgba(0,0,0,0.6)),url('img/carousel-2.webp') no-repeat center center;
+  
+}
 .navbar-nav a{
 font-size: 1.2rem;
 padding: 10px 30px;
@@ -124,7 +132,16 @@ font-weight: bold!important;
   line-height: 60px;
   letter-spacing: -0.02em;
 }
-
+.btn-outline-primary{
+  color: #f5472a!important;
+  background-color: transparent;
+  border-color: #f5472a!important;
+}
+.btn-outline-primary:hover{
+  color: white!important;
+  background-color: #f5472a!important;
+  border-color: #f5472a!important;
+}
 
 .destinations-two {
   position: relative;
@@ -252,8 +269,8 @@ font-weight: bold!important;
   -webkit-appearance: none;
   border: none;
   outline: none !important;
-  background-color: var(--thm-primary);
-  color: var(--thm-base);
+  background-color: #f5472a;
+  color: white;
   font-size: 12px;
   font-weight: 700;
   text-transform: uppercase;
@@ -272,7 +289,7 @@ font-weight: bold!important;
   left: 0;
   right: 0;
   height: 100%;
-  background-color: var(--thm-black);
+  background-color: black;
   transition-delay: .1s;
   transition-timing-function: ease-in-out;
   transition-duration: .5s;
@@ -290,7 +307,7 @@ font-weight: bold!important;
 }
 
 .thm-btn:hover {
-  color: var(--thm-base);
+  color: white;
 }
 
 
@@ -322,6 +339,824 @@ font-weight: bold!important;
 .destinations-two__btn {
   background-color: white;
   color: black;
+}
+
+.contacts-page .page_body {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-top: 46px;
+}
+.contacts-page .contacts-left {
+  background: #F7F7F7;
+  border-radius: 12px;
+  min-height: 455px;
+  width: 42%;
+  padding: 48px;
+}
+.contacts-page .contacts-left .tel {
+  width: 50%;
+}
+.contacts-page .contacts-left .tel a {
+  font-size: 26px;
+  font-weight: 600;
+  color: #222;
+  line-height: 36px;
+}
+.contacts-page .contacts-left p:not([class]) {
+  color: rgba(34, 34, 34, 0.37);
+  font-size: 18px;
+}
+.contacts-page .contacts-left .email {
+  width: 50%;
+}
+.contacts-page .contacts-left .email a {
+  font-size: 22px;
+  color: #FF3B00;
+  line-height: 36px;
+}
+.contacts-page .contacts-left .address {
+  font-size: 18px;
+  color: #222;
+  position: relative;
+  padding-left: 25px;
+  margin-top: 36px;
+}
+.contacts-page .contacts-left .address:before {
+  width: 16px;
+  height: 22px;
+  background: url(../img/geo-red.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 5px;
+}
+.contacts-page .contacts-left .social-links {
+  margin-top: 34px;
+}
+.contacts-page .contacts-left .btn {
+  height: 48px;
+  background: #D03000;
+  border-radius: 8px;
+  font-size: 21px;
+  color: #fff;
+  text-align: center;
+  padding: 0 20px;
+  display: block;
+  float: left;
+  line-height: 48px;
+  width: auto;
+  margin-top: 70px;
+}
+.contacts-page .contacts-right {
+  background: #eee;
+  min-height: 455px;
+  border-radius: 12px;
+  width: 56%;
+  overflow: hidden;
+  position: relative;
+  margin-left: 2%;
+}
+.contacts-page .contacts-right .map {
+  border-radius: 12px;
+}
+.contacts-page .contacts-right .map iframe {
+  border-radius: 12px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+ 
+.contact-page__social {
+  position: relative;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.contact-page__social a {
+  position: relative;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  text-align: center;
+  color: black;
+  background-color: #faf5ee;
+  border-radius: 50%;
+  font-size: 15px;
+  height: 50px;
+  width: 50px;
+  transform: rotate(0);
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  z-index: 1;
+}
+
+.contact-page__social a:hover {
+  color: white;
+  transform: rotate(360deg);
+}
+
+.contact-page__social a:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  background-color: #f5472a;
+  border-radius: 50%;
+  transform: scale(0.0);
+  transform-origin: center;
+  transform-style: preserve-3d;
+  transition: all 0.4s cubic-bezier(0.62, 0.21, 0.45, 1.52);
+  z-index: -1;
+}
+
+.contact-page__social a:hover:before {
+  transform: scaleX(1.0);
+}
+
+.contact-page__social a+a {
+  margin-left: 10px;
+}
+
+.page {
+  padding-bottom: 20px;
+}
+.title {
+  font-size: 48px;
+  font-family: 'Prata', serif;
+  margin-bottom: 12px;
+}
+.subtitle {
+  font-size: 18px;
+  color: rgba(74, 74, 74, 0.58);
+}
+
+.social-links .link {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  display: block;
+  float: left;
+  position: relative;
+  margin-right: 23px;
+}
+.social-links .link:last-child {
+  margin-right: 0;
+}
+.social-links .link span {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  z-index: 1;
+  background: inherit;
+}
+.social-links .link span:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  content: '';
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.social-links .link:after {
+  background: inherit;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  right: -4px;
+  bottom: -4px;
+  border-radius: 50%;
+  content: '';
+  filter: blur(6px);
+  -webkit-filter: blur(6px);
+  -moz-filter: blur(6px);
+  opacity: 0;
+  transition: all .1s linear;
+  will-change: opacity;
+}
+.social-links .link:hover:after {
+  opacity: 1;
+  transition: all .1s linear;
+}
+
+.page_head {
+  position: relative;
+  z-index: 1;
+}
+.page_head .title,
+.page_head .subtitle {
+  text-align: left;
+}
+.wrap {
+  width: 100%;
+  max-width: 1440px;
+  float: none;
+  margin: 0 auto;
+}
+
+ .wrap_float {
+  position: relative;
+}
+
+.about-us-page .title {
+  margin-bottom: 40px;
+  text-align: center;
+}
+.about-us-page .about-us {
+  text-align: center;
+}
+.about-us-page .description {
+  color: #222;
+  font-size: 26px;
+  font-style: italic;
+  margin-bottom: 28px;
+}
+.about-us-page .text {
+  font-size: 21px;
+  color: #919193;
+  text-align: center;
+}
+.about-us-page .image-block {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  text-align: left;
+}
+.about-us-page .image-block img {
+  border-radius: 14px;
+  display: block;
+  max-width: 100%;
+}
+.about-us-page .image-block span {
+  font-size: 16px;
+  color: #919193;
+  display: inline-block;
+  margin-top: 10px;
+}
+.about-us-page .statistics {
+  margin-top: 40px;
+}
+.about-us-page .statistics_item {
+  text-align: center;
+  width: 30%;
+  margin-right: 5%;
+  padding: 0 20px;
+}
+.about-us-page .statistics_item:last-child {
+  margin-right: 0;
+}
+.about-us-page .statistics_item ._value {
+  font-size: 34px;
+  font-family: "Prata", serif;
+  color: #fff;
+  width: 112px;
+  height: 112px;
+  border-radius: 50%;
+  background: #FF3B00;
+  line-height: 120px;
+  display: inline-block;
+  float: none;
+  margin-bottom: 12px;
+}
+.about-us-page .statistics_item ._title {
+  font-size: 21px;
+  color: #222;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.about-us-page .statistics_item ._text {
+  font-size: 21px;
+  color: #919193;
+}
+.about-us-page .team {
+  overflow: hidden;
+  margin-top: 74px;
+  margin-bottom: 80px;
+}
+.about-us-page .team-head {
+  position: relative;
+  margin-bottom: 40px;
+}
+.about-us-page .team-head .title {
+  text-align: center;
+  margin-bottom: 0;
+}
+.about-us-page .team .slick-list {
+  overflow: visible;
+}
+.about-us-page .team .arrows {
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  right: 0;
+  width: auto;
+}
+.about-us-page .team .arrows .arrow {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: #C7C7C7;
+  position: relative;
+  transition: all .2s linear;
+}
+.about-us-page .team .arrows .arrow:before {
+  width: 16px;
+  height: 12px;
+  background: url(../img/left-arrow.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 50%;
+  margin-top: -6px;
+  margin-left: -8px;
+  opacity: 1;
+  transition: all .2s linear;
+}
+.about-us-page .team .arrows .arrow:after {
+  width: 16px;
+  height: 12px;
+  background: url(../img/right-arrow.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 50%;
+  margin-top: -6px;
+  margin-left: -8px;
+  opacity: 0;
+  transition: all .2s linear;
+  transform: rotate(180deg);
+}
+.about-us-page .team .arrows .arrow.next {
+  margin-left: 18px;
+  transform: rotate(180deg);
+}
+.about-us-page .team .arrows .arrow:hover {
+  background: rgba(199, 199, 199, 0.18);
+  transition: all .2s linear;
+  cursor: pointer;
+}
+.about-us-page .team .arrows .arrow:hover:before {
+  opacity: 0;
+  transition: all .2s linear;
+}
+.about-us-page .team .arrows .arrow:hover:after {
+  opacity: 1;
+  transition: all .2s linear;
+}
+.about-us-page .team_item {
+  width: 456px;
+  margin-right: 30px;
+}
+.about-us-page .team_item:hover .image:before {
+  opacity: .5;
+  transition: all .2s linear;
+}
+.about-us-page .team_item:hover .image .socials {
+  opacity: 1;
+  transition: all .4s ease;
+}
+.about-us-page .team_item:hover .image .socials .links {
+  transform: none;
+  transition: all .4s ease;
+}
+.about-us-page .team_item .image {
+  height: 456px;
+  border-radius: 14px;
+  margin-bottom: 22px;
+  position: relative;
+  overflow: hidden;
+}
+.about-us-page .team_item .image .img_wrap {
+  height: inherit;
+}
+.about-us-page .team_item .image:before {
+  background: #222;
+  opacity: 0;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  transition: all .2s linear;
+}
+.about-us-page .team_item .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+.about-us-page .team_item .image .socials {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  opacity: 0;
+  transition: all .2s linear;
+}
+.about-us-page .team_item .image .socials .links {
+  text-align: center;
+  transform: scale(1.3);
+  transition: all .4s ease;
+}
+.about-us-page .team_item .image .socials .links a {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  float: none;
+  position: relative;
+  margin: 0 16px;
+}
+.about-us-page .team_item .image .socials .links a:before {
+  position: absolute;
+  content: '';
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 50%;
+  left: 50%;
+}
+.about-us-page .team_item .image .socials .links a.facebook:before {
+  width: 16px;
+  height: 28px;
+  background-image: url(../img/facebook-logo.svg);
+  margin-top: -14px;
+  margin-left: -8px;
+}
+.about-us-page .team_item .image .socials .links a.instagram:before {
+  width: 26px;
+  height: 26px;
+  background-image: url(../img/instagram-logo.svg);
+  margin-top: -13px;
+  margin-left: -13px;
+}
+.about-us-page .team_item .image .socials .links a.pinterest:before {
+  width: 22px;
+  height: 28px;
+  background-image: url(../img/pinterest.svg);
+  margin-top: -14px;
+  margin-left: -11px;
+}
+.about-us-page .team_item .image .socials .links a.twitter:before {
+  width: 28px;
+  height: 22px;
+  background-image: url(../img/twitter-logo.svg);
+  margin-top: -11px;
+  margin-left: -14px;
+}
+.about-us-page .team_item .name {
+  font-size: 21px;
+  color: #222;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.about-us-page .team_item .position {
+  font-size: 21px;
+  color: #919193;
+}
+.about-us-page .office .arrows {
+  position: absolute;
+  z-index: 2;
+  top: 30px;
+  right: 30px;
+  width: auto;
+}
+.about-us-page .office .arrows .arrow {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.42);
+  position: relative;
+  transition: all .2s linear;
+}
+.about-us-page .office .arrows .arrow:before {
+  width: 16px;
+  height: 12px;
+  background: url(../img/left-arrow.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 50%;
+  margin-top: -6px;
+  margin-left: -8px;
+  opacity: 1;
+  transition: all .2s linear;
+}
+.about-us-page .office .arrows .arrow:after {
+  width: 16px;
+  height: 12px;
+  background: url(../img/right-arrow.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 50%;
+  margin-top: -6px;
+  margin-left: -8px;
+  opacity: 0;
+  transition: all .2s linear;
+  transform: rotate(180deg);
+}
+.about-us-page .office .arrows .arrow.next {
+  margin-left: 18px;
+  transform: rotate(180deg);
+}
+.about-us-page .office .arrows .arrow:hover {
+  background: #fff;
+  transition: all .2s linear;
+  cursor: pointer;
+}
+.about-us-page .office .arrows .arrow:hover:before {
+  opacity: 0;
+  transition: all .2s linear;
+}
+.about-us-page .office .arrows .arrow:hover:after {
+  opacity: 1;
+  transition: all .2s linear;
+}
+.about-us-page .office .slider_wrap {
+  position: relative;
+  margin-bottom: 44px;
+}
+.about-us-page .office_slider {
+  overflow: hidden;
+  border-radius: 15px;
+}
+.about-us-page .office_slider .slide {
+  height: 524px;
+  overflow: hidden;
+  border-radius: 15px;
+}
+.about-us-page .office_slider .slide img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: center;
+}
+/*----------------------------------------------------------------------------------
+2. Media queries
+-----------------------------------------------------------------------------------*/
+@media screen and (min-width: 1521px) {
+  .about-us-page .wrap {
+    max-width: 1090px;
+  }
+  .about-us-page .team .wrap {
+    max-width: 1440px;
+  }
+}
+@media screen and (max-width: 1520px) {
+  .about-us-page .team_item {
+    width: 382px;
+    margin-right: 16px;
+  }
+  .about-us-page .team_item .image {
+    height: 376px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .about-us-page .statistics_item {
+    padding: 0;
+  }
+  .about-us-page .statistics_item ._text {
+    font-size: 18px;
+  }
+  .about-us-page .statistics_item ._title {
+    font-size: 20px;
+  }
+  .about-us-page .team_item .position {
+    font-size: 19px;
+  }
+}
+@media screen and (max-width: 1040px) {
+  .about-us-page .team_item .image .socials .links {
+    transform: none;
+  }
+  .mobile .about-us-page .team-body .slider {
+    overflow: auto;
+    padding-left: 4vw;
+    padding-bottom: 8px;
+  }
+  .mobile .about-us-page .team-body .slider .team_slider {
+    width: auto;
+    white-space: nowrap;
+  }
+  .mobile .about-us-page .team_item {
+    display: inline-block;
+    float: none;
+    white-space: normal;
+  }
+  .mobile .about-us-page .team_item:last-child {
+    margin-right: 4vw;
+  }
+  .mobile .about-us-page .team .title {
+    padding-left: 4vw;
+    padding-right: 4vw;
+  }
+  .mobile .about-us-page .team .wrap {
+    max-width: 100%;
+    width: 100%;
+  }
+  .mobile .about-us-page .team .arrows {
+    display: none;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .about-us-page .statistics_item ._text {
+    font-size: 16px;
+  }
+  .about-us-page .team_item .image {
+    overflow: visible;
+    height: 310px;
+  }
+  .about-us-page .team_item .image .img_wrap {
+    overflow: hidden;
+    border-radius: 14px;
+  }
+  .about-us-page .team_item .image .socials {
+    opacity: 1;
+    height: auto;
+    bottom: -50px;
+    top: auto;
+  }
+  .about-us-page .team_item {
+    width: 310px;
+  }
+  .about-us-page .team_item .image .socials .links {
+    text-align: left;
+  }
+  .about-us-page .team_item .image .socials .links a {
+    margin-left: 0;
+  }
+  .about-us-page .team_item .image .socials .links a.facebook:before {
+    background-image: url(../img/facebook-logo-black.svg);
+  }
+  .about-us-page .team_item .image .socials .links a.instagram:before {
+    background-image: url(../img/instagram-logo-black.svg);
+  }
+  .about-us-page .team_item .image .socials .links a.pinterest:before {
+    background-image: url(../img/pinterest-black.svg);
+  }
+  .about-us-page .team_item .image .socials .links a.twitter:before {
+    background-image: url(../img/twitter-logo-black.svg);
+  }
+  .about-us-page .team_item .image {
+    margin-bottom: 60px;
+  }
+  .about-us-page .team_item .name {
+    margin-bottom: 5px;
+  }
+  .about-us-page .office_slider .slide {
+    height: 60vw;
+  }
+  .about-us-page .office .arrows .arrow {
+    background: #fff;
+  }
+  .about-us-page .office .arrows .arrow:before {
+    opacity: 0;
+  }
+  .about-us-page .office .arrows .arrow:after {
+    opacity: 1;
+  }
+  .about-us-page .team_item .image:before {
+    display: none;
+  }
+}
+@media screen and (max-width: 760px) {
+  .about-us-page .description {
+    font-size: 20px;
+  }
+  .about-us-page .title {
+    margin-bottom: 20px;
+  }
+  .about-us-page .text {
+    font-size: 18px;
+  }
+  .about-us-page .statistics_item {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 40px;
+  }
+  .about-us-page .statistics_item:last-child {
+    margin-bottom: 0;
+  }
+  .about-us-page .statistics_item ._title {
+    margin-bottom: 10px;
+  }
+  .about-us-page .team .arrows {
+    display: none;
+  }
+}
+@media screen and (max-width: 640px) {
+  .about-us-page .description {
+    font-size: 18px;
+  }
+  .about-us-page .office .arrows {
+    right: 15px;
+    top: 15px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .about-us-page .team_item {
+    width: 270px;
+    margin-right: 12px;
+  }
+  .about-us-page .team_item .image {
+    height: 272px;
+  }
+}
+@media screen and (max-width: 1520px) {
+  .contacts-page .contacts-left .tel a {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .contacts-page .contacts-left .tel {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .contacts-page .contacts-left .email {
+    width: 100%;
+  }
+  .contacts-page .contacts-left .address {
+    margin-top: 25px;
+  }
+  .contacts-page .contacts-left .btn {
+    margin-top: 45px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .contacts-page .contacts-left {
+    width: 100%;
+    min-height: inherit;
+  }
+  .contacts-page .contacts-right {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 20px;
+  }
+  .contacts-page .contacts-left .tel {
+    width: 50%;
+  }
+  .contacts-page .contacts-left .email {
+    width: 50%;
+  }
+  .contacts-page .page_body {
+    display: block;
+  }
+  .contacts-page .contacts-right {
+    min-height: inherit;
+    height: 450px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .contacts-page .contacts-left {
+    padding: 26px;
+  }
+  .contacts-page .contacts-left .email {
+    clear: both;
+    width: 100%;
+  }
+  .contacts-page .contacts-left .tel {
+    width: 100%;
+  }
+  .contacts-page .contacts-right {
+    height: 360px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .contacts-page .contacts-left {
+    padding: 26px 20px;
+  }
+  .contacts-page .contacts-left .address {
+    font-size: 16px;
+  }
+  .contacts-page .contacts-left .social-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 @media (min-width: 768px) {
