--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Tapestry&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 body{
   padding: 0;
@@ -925,6 +926,348 @@ color: #f5472a!important;
 .dest:hover .card-text{
   display: block;
 }
+
+/* Popup Section */
+.modal-overlay {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  pointer-events: none;
+
+  opacity: 0;
+  transition: all 400ms ease;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+}
+
+.modall {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, calc(-50% - 10px));
+  z-index: 300;
+  background: #fff;
+  min-width: 550px;
+  font-family: "Roboto", sans-serif;
+  box-shadow: 0 5px 26px -8px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  display: flex;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: all 400ms ease;
+}
+
+.modall.active {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translate(-50%, -50%);
+}
+
+.modall .close-btn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 4px;
+}
+
+.modall .left {
+  background: #242424;
+  color: #fff;
+  border-radius: 20px;
+  box-shadow: 17px 0 17px -8px rgba(0, 0, 0, 0.3);
+  padding: 24px 16px;
+  text-align: center;
+}
+
+.modall .left h3 {
+  font-size: 22px;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.modall .left h3.sale-text {
+  font-size: 36px;
+}
+
+.modall .left .discount p {
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #ebff00;
+  margin: 0;
+  margin-top: 32px;
+}
+
+.modall .left .discount .discount-percent {
+  font-size: 60px;
+  font-weight: 300;
+}
+
+.modall .right {
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.modall .right h2 {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 24px;
+}
+
+.modall .right p {
+  color: #222;
+}
+
+.modall .right .discount-btn {
+  text-decoration: none;
+  background: #f5472a;
+  align-self: flex-start;
+  padding: 8px 32px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 20px;
+}
+
+.modall .bg-shape {
+  position: absolute;
+  height: 12px;
+  width: 40%;
+  background: linear-gradient(180deg, #04b6c1 0%, #0e8a91 100%);
+  border-radius: 20px 20px 0 0;
+  top: -12px;
+  left: 40%;
+}
+
+.popup-btn{
+	position: absolute!important;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.main-btn-rect,
+.main-btn-circle{
+	position: relative;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	color: #FFFFF0;
+	background-color: rgb(252, 79, 79);
+	text-transform: uppercase;
+	font-size: 25px;
+	letter-spacing: 1px;	
+	outline: none;
+	cursor: pointer;
+	z-index: 100;
+}
+.main-btn-rect {
+	padding: 10px 80px;
+	line-height: 30px;
+}
+.main-btn-rect:before, 
+.main-btn-rect:after{
+  position: absolute;
+  content: '';
+  top:0;
+  width: 0%;
+  height: 100%;
+  background-color: rgba(255, 255, 240, 0.2);
+  -webkit-transition: width 0.3s;
+  -o-transition: width 0.3s;
+  transition: width 0.3s;
+}
+.main-btn-rect:before {
+  left: 0;
+}
+.main-btn-rect:after {
+  right: 0;
+}
+.main-btn-rect:hover:before, 
+.main-btn-rect:hover:after{
+  width: 50%;
+}
+.main-btn-circle{
+	height: 40px;
+	width: 40px;
+	-webkit-border-radius: 50%;
+	border-radius: 100%;
+	line-height: 40px;
+  -webkit-transition: box-shadow 0.3s;
+  -o-transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+}
+.main-btn-circle:hover{   
+  -webkit-box-shadow: inset 2px 1px 0px 20px rgba(255, 255, 240, 0.2);
+  -moz-box-shadow: inset 2px 1px 0px 20px rgba(255, 255, 240, 0.2);
+  box-shadow: inset 2px 1px 0px 20px rgba(255, 255, 240, 0.2);
+}
+.popup{
+  position: fixed;
+	top: 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 10001;
+}
+.popup.active{
+  top:0;
+  background-color: rgba(3, 3, 3, 0.98); 
+  transition: background-color .6s ,opacity .6s;
+}
+.popup .main-btn-rect{
+  padding: 10px 100px;
+}
+.popup .popup-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  max-height: 568px;
+  min-width: 320px;
+  margin-top: 150px;
+  padding: 25px;
+  background-color: #FFFFF0;
+  color: #070000;
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -o-transform: translateX(-50%) translateY(-50%);
+  transition: margin .6s;
+  -webkit-transition: margin .6s;
+  -moz-transition: margin .6s;
+  -o-transition: margin .6s;
+}
+.popup.active .popup-content{
+  margin-top: 0px;
+}
+.popup-content h6{
+  display: table;
+  font-size: 16px;
+  text-align: center;
+  margin: 10px auto;
+  font-family: 'Roboto',sans-serif;
+  text-transform: uppercase;
+  font-weight: 100;  
+}
+.form-group{
+	position: relative;
+	width: 90%;
+	margin: 0px auto;
+}
+form#send input, form#send textarea{
+	position: relative;
+	margin-bottom: 32px;
+	width: 100%;
+	height: 29px;
+	font-family: 'RobotoLight', sans-serif;
+	text-indent: 20px;
+  background-color: transparent;
+	outline: 0;
+	border: none;
+	border-bottom: 1px solid #070000;
+	-webkit-transition: border 0.6s;
+	-o-transition: border 0.6s;
+	transition: border 0.6s;
+}
+form#send input:focus,
+form#send textarea:focus{
+	border-bottom: 1px solid rgb(63, 173, 168); 
+}
+form#send label{
+	position: absolute;
+	top: 0;
+	line-height: 28px;
+	-webkit-transition: color .5s;
+	-o-transition: color .5s;
+	transition: color .5s;
+}
+form#send input:focus + label,
+form#send textarea:focus + label{
+  color: rgb(63, 173, 168);
+}
+form#send .txt{
+	line-height: 22px;
+	left: 2px;
+}
+form#send .main-btn-rect {
+	position: relative;
+	display: block;
+	padding: 12px 80px;
+	margin: 0px auto;
+	font-size: 14px;
+}
+form#send .main-btn-rect i {
+	margin-right: 5px;
+}
+.popup .fade-out{
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  text-align: center;
+  font-size: 15px;
+}
+
+
+@media (max-width: 600px) {
+  .modall {
+    flex-direction: column;
+    min-width: 300px;
+  }
+
+  .modall .bg-shape {
+    display: none;
+  }
+
+  .modall .close-btn {
+    color: #eee;
+    right: 8px;
+    top: 8px;
+  }
+
+  .modall .left .discount-text {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+  }
+
+  .modall .left h3,
+  .modall .left h3.sale-text {
+    font-size: 24px;
+  }
+
+  .modall .left .discount p {
+    margin-top: 20px;
+  }
+
+  .modall .right {
+    padding: 24px;
+    text-align: center;
+  }
+
+  .modall .right h2 {
+    text-transform: none;
+  }
+
+  .modall .right h2 br {
+    display: none;
+  }
+
+  .modall .right .discount-btn {
+    align-self: auto;
+  }
+}
+
+
 /*----------------------------------------------------------------------------------
 2. Media queries
 -----------------------------------------------------------------------------------*/
